fixed button and output alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
-.outputContainer {
-  display: none;
+body {
+  background:linear-gradient(to right, rgba(173, 185, 240, 0.5), rgba(217, 192, 242, 0.5));
 }
+
+#outputContainer {
+  display: none;
+  padding-left: 15px;
+  font-size: 1.5rem;
+}
+
+#btnContainer {
+ margin-bottom: 10px;
+ margin-left: -13px;
+ margin-top: 20px;
+}
+
+
+/* .text {
+  margin-top: 10px;
+} */
+
